--- a/spec/fixtures/posts.yml
+++ b/spec/fixtures/posts.yml
@@ -1,3 +1,16 @@
+# == Schema Information
+# Schema version: 20100211191224
+#
+# Table name: posts
+#
+#  id         :integer         not null, primary key
+#  title      :string(255)
+#  body       :text
+#  slug       :string(255)
+#  created_at :datetime
+#  updated_at :datetime
+#
+
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
 one:
