--- a/config/database.yml
+++ b/config/database.yml
@@ -16,7 +16,7 @@ test:
   timeout: 5000
 
 production:
-  adapter: mysql
+  adapter: mysql2
   database: codingprime
   host: localhost
   username: pr1m3
